--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-red-fetish_73604
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 73604-h/images/cover.jpg
 creator:
   author:
     agent_name: Long, Frank Belknap
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/25911
     wikipedia: https://en.wikipedia.org/wiki/Frank_Belknap_Long
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73604#The-red-fetish
 gutenberg_issued: '2024-05-11'
 gutenberg_type: Text
 identifiers:
